<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sumeesh.madweather.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editable_Location"
        android:ems="10"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ,"
        android:id="@+id/editTextLocation"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="City,State,Country"
        android:textSize="25sp" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_Metric"
        android:id="@+id/switchMetric"
        android:layout_below="@+id/editTextLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true"
        android:textSize="22sp"
        android:padding="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Check"
        android:id="@+id/buttonCheck"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp" />
</RelativeLayout>
