<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sumeesh.madweather.WeatherSummary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_Temp_Label"
        android:id="@+id/textViewTemp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#000000"
        android:padding="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Humidity_Label"
        android:id="@+id/textViewHumidity"
        android:layout_below="@+id/textViewTemp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:textColor="#000000"
        android:padding="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Pressure_Label"
        android:id="@+id/textViewPressure"
        android:layout_below="@+id/textViewHumidity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:textSize="25sp"
        android:padding="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Weather_Label"
        android:id="@+id/textViewDesc"
        android:layout_below="@+id/textViewPressure"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:textSize="25sp"
        android:padding="10sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textViewTemp"
        android:id="@+id/linerLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
